# uav_trajectories

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake.yml
examples/: circle_with_time.py  full_traj_with_time.py  spiral.csv  takeoff.csv  timed_waypoints_helix_yaw.csv  waypoints1.csv  yaw0.csv  yaw_with_time.py
scripts/: auto_yaw_trajectory.py  convert_to_bezier.py  full_traj.csv  full_traj_traj.csv  gen_traj.py  generate_trajectory.py  plot_trajectory.py  uav_trajectory.py
src/: genTrajectory.cpp
